<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/products_list_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/products_list_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/worksans"
            android:gravity="center"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/products"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/products_list_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/pacific_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/products_list_error"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/error_loading_products"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_outline_error_outline_24"
        app:tint="@color/pacific_blue" />

    <TextView
        android:id="@+id/products_list_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/worksans_semibold"
        android:text="@string/error_loading_products"
        android:textColor="@color/pacific_blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/products_list_error"
        app:layout_constraintStart_toStartOf="@+id/products_list_error"
        app:layout_constraintTop_toBottomOf="@+id/products_list_error" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toTopOf="@+id/products_list_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/products_list_header" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/products_list_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/products_list_pagination_first"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/first_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_first_page_24" />

            <ImageButton
                android:id="@+id/products_list_pagination_previous"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/previous_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/products_list_pagination_first"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_navigate_before_24" />

            <TextView
                android:id="@+id/products_list_pagination_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/products_list_pagination_next"
                app:layout_constraintStart_toEndOf="@+id/products_list_pagination_previous"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1 to 10 of 100" />

            <ImageButton
                android:id="@+id/products_list_pagination_next"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/next_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/products_list_pagination_last"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

            <ImageButton
                android:id="@+id/products_list_pagination_last"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/last_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_last_page_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>